--- a/index.html
+++ b/index.html
@@ -7,11 +7,55 @@
 </head>
 <body>
     <main>
-         <section class="resultado"
-    
+         <section class="resultado">
+         <h1>Seu resultado</h1>
+
+         <div>
+            <strong>76</strong>
+            <strong>de 100</strong>
+         </div>
+
+         <h2>ótimo</h2>
+         <p>Sua performance superou a de 65% das pessoas que realizaram o teste aqui!</p>
          </section>
 
-         <section class="resumo"
+         <section class="resumo">
+            <h2>Resumo</h2>
+
+            <div>
+                <div>
+                    <img src="./images/icon-reaction.svg" alt="icone de reação">
+                    <span>reação</span>
+                </div>
+
+                <strong>80 / 100</strong>
+            </div>
+            <div>
+                <div>
+                    <img src="./images/icon-memory.svg" alt="icone da memoria">
+                    <span>memoria</span>
+                </div>
+
+                <strong>92 / 100</strong>
+            </div>
+            <div>
+                <div>
+                    <img src="./images/icon-verbal.svg" alt="icone verbal">
+                    <span>Verbal</span>
+                </div>
+
+                <strong>61 / 100</strong>
+            </div>
+            <div>
+                <div>
+                    <img src="./images/icon-visual.svg" alt="icone Visual">
+                    <span>Visual</span>
+                </div>
+
+                <strong>73 / 100</strong>
+            </div>
+
+            <button>Continuar <button>
          </section>
     </main>
 </body>
