--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
          <section class="resumo">
             <h2>Resumo</h2>
 
-            <div>
+            <div class="resumo_reacao">
                 <div>
                     <img src="./images/icon-reaction.svg" alt="icone de reação">
                     <span>reação</span>
@@ -34,7 +34,7 @@
 
                 <strong>80 / 100</strong>
             </div>
-            <div>
+            <div class="resumo_memoria">
                 <div>
                     <img src="./images/icon-memory.svg" alt="icone da memoria">
                     <span>memoria</span>
@@ -42,7 +42,7 @@
 
                 <strong>92 / 100</strong>
             </div>
-            <div>
+            <div class="resumo_verbal">
                 <div>
                     <img src="./images/icon-verbal.svg" alt="icone verbal">
                     <span>Verbal</span>
@@ -50,7 +50,7 @@
 
                 <strong>61 / 100</strong>
             </div>
-            <div>
+            <div class="resumo_visual">
                 <div>
                     <img src="./images/icon-visual.svg" alt="icone Visual">
                     <span>Visual</span>
